--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "react-resizable-panels": "^2.0.13",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "react-trello": "^2.2.11",
     "react-widgets": "^5.8.4",
     "reactflow": "^11.10.4",
+    "slick-carousel": "^1.8.1",
     "tailwind-config": "^0.1.2",
     "tailwind-merge": "^2.3.0",
     "xlsx": "^0.18.5",
@@ -60,6 +62,7 @@
     "@types/react": "^18.2.66",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.22",
+    "@types/react-slick": "^0.23.13",
     "@types/react-transition-group": "^4.4.10",
     "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
